@@ -1,3 +1,8 @@
+Sat Oct 15 00:54:01 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* process.c (proc_exec_cmd): use UTF-8 version aspawn.
+	  [ruby-dev:49838] [Bug #12841]
+
 Fri Oct 14 22:26:10 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* lib/optparse/kwargs.rb (OptionParser#define_by_keywords):
